Fix image from overflowing in content create preview
Refs: #124

--- a/socialhome/static/sass/content.scss
+++ b/socialhome/static/sass/content.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.markdownx-preview img {
+  max-width: 100%;
+}
+
 a.opengraph-card {
   cursor: pointer;
   text-decoration: none;
